[package]
name = "wyvern"
version = "0.1.0"
authors = ["nicohman <nicohman@demenses.net>"]
license="GPL-3.0"
repository="https://git.sr.ht/~nicohman/wyvern"
[[bin]]
name = "wyvern"
path = "src/main.rs"
[dependencies]
structopt = "0.2.10"
serde = "1.0.70"
serde_derive = "1.0"
serde_json = "1.0"
human-panic = "1.0.1"
confy = "0.3.1"
gog = { git = "https://git.sr.ht/~nicohman/gogapi-rs"}
indicatif = "0.10.3"
