[package]
name = "wyvern"
version = "1.4.1"
authors = ["nicohman <nicohman@demenses.net>"]
license="GPL-3.0"
repository="https://git.sr.ht/~nicohman/wyvern"
description="A simple CLI tool for installing and maintaining linux GOG games"
readme="README.md"
keywords=["gog", "games", "gaming"]
categories=["games","command-line-interface"]
[features]
eidolonint = ["eidolon"]
[[bin]]
name = "wyvern"
path = "src/main.rs"
[dependencies]
structopt = "0.2.10"
serde = "1.0.70"
dialoguer = "0.4.0"
serde_derive = "1.0"
serde_json = "1.0"
human-panic = "1.0.1"
confy = "0.3.1"
gog = "0.4.0" 
indicatif = "0.10.3"
zip = "0.5"
eidolon = { version = "1.4.6", optional = true }
toml = "0.4.10"
dirs = "1.0.4"
rayon = "1.0.3"
log = "0.4"
clap-verbosity-flag = "0.2.0"
crc = "1.8.1"
inflate = "0.4.4"
reqwest = "0.9.9"
curl = "0.4"
walkdir = "2"
url = "1.7.2"
console = "0.7.0"
lazy_static = "1"
tempfile = "2"
